<resources>
    <string name="app_name">Coumo</string>
    <string name="welcome">쿠모가 환영합니다😘</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login_as_customer">일반 고객 로그인</string>
    <string name="login_as_owner">사장님 로그인</string>
    <string name="register">회원가입</string>
    <string name="find_id_pw">아이디/비밀번호 찾기</string>
    <string name="impossible_find_owner_in_app">사장님 회원가입 및 아이디/비밀번호 찾기는 WEB에서만 가능합니다</string>
    <string name="at">\@</string>
    <string name="wrong_password_rule">8~16자의 영문 대/소문자, 숫자, 특수문자를 사용해 주세요.</string>
    <string name="right_password_rule">올바른 형식입니다</string>
    <string name="dup_id">중복되는 아이디입니다.</string>
    <string name="useful_id">사용가능한 아이디입니다.</string>
    <string name="wrong_date_format">올바르지 않은 날짜 형식입니다. Ex) 2024.01.01</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="send_code">인증번호 발송</string>
    <string name="resend_code">인증번호 재발송</string>
    <string name="account_hello">안녕하세요 %s님!</string>
    <string name="post_date">%s에 작성됨</string>
    <string name="home">홈</string>
    <string name="coupon">내 쿠폰</string>
    <string name="community">동네 소식</string>
    <string name="account">내 계정</string>
    <string name="align">정렬방식</string>
    <string name="most_store">👍 많이 적립한 가게</string>
    <string name="recent_store">⏰ 최근 적립한 가게</string>
    <string name="qr_title">QR/바코드로 빠른 적립</string>
    <string name="view_all">전체보기</string>
    <string name="new_menu">✨ 신메뉴/신제품</string>
    <string name="no_show">⏰ 노쇼 빈자리 SALE</string>
    <string name="event">🎉 이벤트</string>
    <string name="all_title_1">우리동네 여러 혜택을 모아봤어요</string>
    <string name="all_title_2">우리동네 인기상품 리스트!</string>
    <string name="new_menu_title">우리동네 신메뉴들을 찾아봤어요</string>
    <string name="no_show_title">우리동네 노쇼빈자리 SALE을 찾아봤어요</string>
    <string name="event_title">우리동네 이벤트들을 찾아봤어요</string>
    <string name="coupon_format">쿠모로 %d개 모았어요!</string>
    <string name="my_profile">내 프로필</string>
    <string name="service_center">쿠모 고객센터</string>
    <string name="logout">로그아웃</string>
    <string name="call_number">1577–9999</string>
    <string name="withdraw">탈퇴하기</string>
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    <string name="nick">닉네임</string>
    <string name="gender">성별</string>
    <string name="phone">전화번호</string>
    <string name="dialog_cancel">취소</string>
</resources>