<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.umc.coumo.domain.type.CommunityTabType"/>
        <variable
            name="viewModel"
            type="com.umc.coumo.domain.viewmodel.CommunityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintStart_toEndOf="@id/chip_all"
            app:layout_constraintTop_toTopOf="@id/chip_all"
            app:layout_constraintBottom_toBottomOf="@id/chip_all"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/horizontal_padding"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/chip_new_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_menu"
                    android:background="@drawable/selector_chip_background"
                    android:textColor="@color/selector_chip_text_color"
                    android:layout_marginStart="4dp"
                    android:onClick="@{() -> viewModel.changeTab(CommunityTabType.NEW_MENU)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selected="@{viewModel.currentTab == CommunityTabType.NEW_MENU}"/>

                <TextView
                    android:id="@+id/chip_no_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_show"
                    android:background="@drawable/selector_chip_background"
                    android:textColor="@color/selector_chip_text_color"
                    android:layout_marginStart="4dp"
                    android:onClick="@{() -> viewModel.changeTab(CommunityTabType.NO_SHOW)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selected="@{viewModel.currentTab == CommunityTabType.NO_SHOW}"/>

                <TextView
                    android:id="@+id/chip_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event"
                    android:background="@drawable/selector_chip_background"
                    android:textColor="@color/selector_chip_text_color"
                    android:layout_marginStart="4dp"
                    android:onClick="@{() -> viewModel.changeTab(CommunityTabType.EVENT)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selected="@{viewModel.currentTab == CommunityTabType.EVENT}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/chip_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:background="@drawable/selector_chip_background"
            android:textColor="@color/selector_chip_text_color"
            android:layout_marginStart="@dimen/horizontal_padding"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewModel.changeTab(CommunityTabType.ALL)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selected="@{viewModel.currentTab == CommunityTabType.ALL}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>