<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="안녕하세요 김다빈님!"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/font_text"
            android:layout_marginTop="39dp"
            android:layout_marginStart="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/section_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginHorizontal="26dp"
            android:paddingVertical="16dp"
            android:background="@drawable/shape_rec_round_8"
            android:backgroundTint="@color/sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account">

            <TextView
                android:id="@+id/tv_my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/my_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:src="@drawable/icon_right_arrow"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/section_service_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="26dp"
            android:paddingVertical="16dp"
            android:background="@drawable/shape_rec_round_8"
            android:backgroundTint="@color/sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_profile">

            <TextView
                android:id="@+id/tv_service_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/service_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/btn_call"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:src="@drawable/icon_call"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@id/tv_call_number"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_call_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/call_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/section_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="26dp"
            android:paddingVertical="16dp"
            android:background="@drawable/shape_rec_round_8"
            android:backgroundTint="@color/sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_service_center">

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/btn_logout"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:src="@drawable/icon_right_arrow"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>