<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.umc.coumo.domain.type.CommunityTabType"/>
        <variable
            name="viewModel"
            type="com.umc.coumo.domain.viewmodel.CommunityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/section_chip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <HorizontalScrollView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        app:layout_constraintStart_toEndOf="@id/chip_all"
                        app:layout_constraintTop_toTopOf="@id/chip_all"
                        app:layout_constraintBottom_toBottomOf="@id/chip_all"
                        app:layout_constraintEnd_toEndOf="parent">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/horizontal_padding"
                            android:orientation="horizontal"
                            tools:ignore="RtlSymmetry">

                            <TextView
                                android:id="@+id/chip_new_menu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/new_menu"
                                style="@style/ChipTextStyle"
                                android:background="@drawable/selector_chip_background"
                                android:textColor="@color/selector_chip_text_color"
                                android:layout_marginStart="4dp"
                                android:onClick="@{() -> viewModel.changeTab(CommunityTabType.NEW_PRODUCT)}"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:selected="@{viewModel.currentTab == CommunityTabType.NEW_PRODUCT}"/>

                            <TextView
                                android:id="@+id/chip_no_show"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_show"
                                style="@style/ChipTextStyle"
                                android:background="@drawable/selector_chip_background"
                                android:textColor="@color/selector_chip_text_color"
                                android:layout_marginStart="4dp"
                                android:onClick="@{() -> viewModel.changeTab(CommunityTabType.NO_SHOW)}"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:selected="@{viewModel.currentTab == CommunityTabType.NO_SHOW}"/>

                            <TextView
                                android:id="@+id/chip_event"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/event"
                                style="@style/ChipTextStyle"
                                android:background="@drawable/selector_chip_background"
                                android:textColor="@color/selector_chip_text_color"
                                android:layout_marginStart="4dp"
                                android:onClick="@{() -> viewModel.changeTab(CommunityTabType.EVENT)}"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:selected="@{viewModel.currentTab == CommunityTabType.EVENT}"/>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/chip_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        style="@style/ChipTextStyle"
                        android:background="@drawable/selector_chip_background"
                        android:textColor="@color/selector_chip_text_color"
                        android:layout_marginStart="@dimen/horizontal_padding"
                        android:onClick="@{() -> viewModel.changeTab(CommunityTabType.ALL)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:selected="@{viewModel.currentTab == CommunityTabType.ALL}"/>

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="0dp"
                        android:background="@drawable/shape_blur"
                        app:layout_constraintStart_toEndOf="@id/chip_all"
                        app:layout_constraintTop_toTopOf="@id/chip_all"
                        app:layout_constraintBottom_toBottomOf="@id/chip_all"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/section_chip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>